- UI - Updating to include correct coloring for multiple elements with dark mode

--- a/ClashBot-UI/src/app/app.component.scss
+++ b/ClashBot-UI/src/app/app.component.scss
@@ -7,14 +7,14 @@
 }
 
 .dashboard {
-  height: 100%;
   display: flex;
   flex-direction: column;
   padding: 8px;
 }
 
 :host {
-  display: block;
+  display: table;
+  height: 100%;
 }
 
 .copyright-text {
