--- a/ClashBot-UI/src/app/pages/teams-dashboard/team-card/team-card-player-details/team-card-player-details.component.scss
+++ b/ClashBot-UI/src/app/pages/teams-dashboard/team-card/team-card-player-details/team-card-player-details.component.scss
@@ -1,3 +1,6 @@
+@use '@angular/material' as mat;
+@import '../../../../../theme';
+
 .clash-bot-player-details-container {
   width: 100%;
 }
@@ -28,8 +31,6 @@
 }
 
 .player-role-join-btn {
-  background-color: white;
-  border: gray solid 0.5px;
   border-radius: 11px;
   box-shadow: 1px 1px 1px 1px black;
   transition: width 200ms cubic-bezier(0.35, 0, 0.25, 1), opacity 200ms 0s;
@@ -39,7 +40,7 @@
 
 .player-role-join-btn:hover {
   width: 90%;
-  background-color: rgb(240, 240, 240);
+  background-color: mat-color($my-dark-primary);
 }
 
 .player-details-text {
