--- a/ClashBot-UI/src/styles.scss
+++ b/ClashBot-UI/src/styles.scss
@@ -1,14 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @use '@angular/material' as mat;
-
-@import "~@angular/material/theming";
-
+@import './theme.scss';
 @include mat.core();
-
-html, body {
-  height: 100%;
-  margin: 0;
-}
 
 /* SCSS HEX */
 $harvest-gold: #e29400ff;
@@ -16,6 +9,15 @@ $wild-blue-yonder: #a6a6beff;
 $midnight-blue: #000046ff;
 $midnight-blue-2: #171757ff;
 $st-patricks-blue: #2c2c66ff;
+
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
 
 .subtext {
   color: #707070;
@@ -26,27 +28,6 @@ $st-patricks-blue: #2c2c66ff;
   font-size: 1.75em;
 }
 
-$my-primary: mat.define-palette(mat.$indigo-palette, 500);
-$my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$my-dark-primary: mat.define-palette(mat.$deep-purple-palette, A200, A100, A400);
-$my-dark-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-$my-theme: mat.define-light-theme((
-  color: (
-    primary: $my-primary,
-    accent: $my-accent,
-  )
-));
-
-$angular-dark-theme: mat.define-dark-theme(
-    (
-      color: (
-        primary: $my-dark-primary,
-        accent: $my-dark-accent,
-      ),
-    )
-);
-
 .darkMode {
-  @include mat.all-component-themes($angular-dark-theme);
+  @include mat.all-component-themes($dark-theme);
 }
